--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -54,7 +54,7 @@
 
 /*========== Responsive typography ==========*/
 @media (width > 768px) {
-  .services__container{
+  .studies__container{
     grid-template-columns: repeat(2, 250px) 
   }
 }
@@ -130,7 +130,7 @@ body.dark-theme{
 
 /*=============== REUSABLE CSS CLASSES ===============*/
 .container {
-  max-width: 1120px;
+  max-width: 90%;
   margin-inline: 1.5rem;
 }
 
@@ -197,7 +197,7 @@ body.dark-theme{
 
 
 /* Navigation for mobile devices */
-@media (width <= 1150px){
+@media (width <= 1060px){
   .nav__menu{
     position: fixed;
     top: -100%;
@@ -238,7 +238,7 @@ body.dark-theme{
       font-weight: var(--font-semi-bold);
       color: var(--title-color);
     
-    .nav__logo-circle{
+      .nav__logo-circle{
         width: 32px;
         height: 32px;
         background-color: var(--black-color);
@@ -246,7 +246,7 @@ body.dark-theme{
         display:grid;
         place-items: center;
         border-radius: 50px;
-      }     
+      }
     }  
     .nav__toggle{
       width: 32px;
@@ -306,7 +306,7 @@ body.dark-theme{
 
         .nav__link{
           position: relative;
-          color: var(--text-color-light);
+          color: var(--black-color-light);
           font-size: var(--h3-font-size);
           font-weight: var(--font-semi-bold);
           transition: color .3s;
@@ -322,7 +322,7 @@ body.dark-theme{
           transition: width .3s;
         }
         .nav__link:hover{
-          color: var(--white-color);
+          color: white;
         }
         .nav__link:hover::after{
           width: 30%;
@@ -350,6 +350,7 @@ body.dark-theme{
   .home__container{
     padding: 1rem;
     margin: 0 auto;
+    
 
     .home__name{
       font-size: var(--biggest-font-size);
@@ -428,9 +429,23 @@ body.dark-theme{
           transition: background-color .3s;
         }
 
-        .home__social-link:hover{
+        .home__social-link-medium{
           background-color: var(--black-color);
-        }       
+          color: var(--white-color);
+          font-size: 1.25rem;
+          padding: 6px;
+          display: grid;
+          place-items: center;
+          transition: background-color .3s;
+        }
+
+        .home__social-link:hover{
+          background-color: var(--first-color);
+        }  
+        
+        .home__social-link-medium:hover{
+          background-color: var(--first-color);
+        }
       }    
       
     } 
@@ -438,10 +453,10 @@ body.dark-theme{
       margin-top: 4rem;
 
       .home__description{
-        text-align: center;
+        text-align: justify;
         color: var(--title-color);
         margin-bottom: 1.5rem;
-
+        padding-right: 10px;
       }
 
       .home__scroll{
@@ -498,11 +513,11 @@ body.dark-theme{
 
 /*=============== ABOUT ===============*/
 .about__section{
-  background-color: var(--container-color);
+  background-color: var(--body-color);
   transition: background-color .4s;
   
   .about__container{
-    background-color:  var(--container-color);
+    background-color:  var(--body-color);
     transition: background-color .4s;
     padding: 2rem;
     margin: 0 auto;
@@ -521,12 +536,13 @@ body.dark-theme{
 
       .about__image{
         width: 100%;
-        /* Corregir a 220 */
         
         .about__img{
           position: relative;
           border: 4px solid var(--white-color);
           z-index: 1;
+          width: 100%;
+          height: 100%;
         }
 
         .about__shadow,
@@ -565,6 +581,7 @@ body.dark-theme{
         position: relative;
         color: var(--title-color);
         margin-bottom: 1.5rem;
+        text-align: justify;
       }
       .about__description-1::after{
         content: '';
@@ -579,6 +596,7 @@ body.dark-theme{
         position: relative;
         color: var(--title-color);
         margin-bottom: 1.5rem;
+        text-align: justify;
       }
 
       .about__list{
@@ -587,7 +605,7 @@ body.dark-theme{
         margin-bottom: 3rem;
 
         .about__item{
-
+          text-align: justify;
         }
       }
       .about__buttons{
@@ -629,44 +647,41 @@ body.dark-theme{
   
 }
 
-/*=============== SERVICES ===============*/
-.services__section{
+/*=============== studies ===============*/
+.studies__section{
 
   display: flex;
   flex-direction: column;
   flex-wrap: wrap;
   
   .section__title-2{
-    padding-top: 4rem;
 
   }
-  .services__container{
+  .studies__container{
     grid-template-columns: 250px;
-    justify-content: center;
     row-gap: 2rem;
-    padding: 2rem;
+
     position: relative;
     justify-content: center;
     display: flex;
     flex-wrap:wrap;
     flex: 1 0 300px;
-    margin: 1rem;
     margin: 0 auto;
 
 
 
-    .services__card{
+    .studies__card{
       position: relative;
       display: flex;
       flex-wrap:wrap;
       flex: 1 0 200px;
       
-      .services__border{
+      .studies__border{
         display: flex;
         position: inherit;
 
       }
-      .services__content{
+      .studies__content{
         height: 100%;
         background-color: var(--body-color);
         border: 4px solid var(--black-color);
@@ -676,25 +691,25 @@ body.dark-theme{
         transition: background-color .4s;  
         padding: 10px;
 
-        .services__icon{
+        .studies__icon{
 
-          .services__box{
+          .studies__box{
             position: absolute;
             width: 24px;
             height: 24px;
-            background-color: var(--first-color);
+            background-color: var(--container-color);
             right: -2px;
             top: -2px;
           }
         }
-        .services__title{
+        .studies__title{
 
         }
-        .services__description{
+        .studies__description{
 
         }
       }
-      .services__border{
+      .studies__border{
         position: absolute;
         width: 100%;
         height: 100%;
@@ -703,12 +718,12 @@ body.dark-theme{
         left: 0;
         transition: transform .4s;
       }
-      .services__content{
-        .services__icon{
+      .studies__content{
+        .studies__icon{
           position: relative;
           display: inline-block;
         }
-        .services__icon i{
+        .studies__icon i{
           font-size: 2rem;
           color: var(--black-color);
           position: relative;
@@ -716,7 +731,7 @@ body.dark-theme{
         }
       }
     }
-    .services__card:hover .services__border{
+    .studies__card:hover .studies__border{
       transform: translate(.55rem, .55rem);
     }
   }
@@ -725,23 +740,33 @@ body.dark-theme{
 
 /*=============== PROJECTS ===============*/
 .projects__section{
-  background-color: var(--container-color);
+  background-color: var(--body-color);
   transition: background-color .4s;
+  padding-top: 3rem;
+
   .section__title-1{
+    padding-bottom: 1rem;
   }
 
   .projects__container{
     margin: 0 auto;
     display: flex;
     flex-wrap: wrap;
-    flex: 1 0 250px;
-    padding: 2rem;
+    flex: 1 0 300px;
+    max-width: 1220px;
+    width: 100%;
+    
 
     .projects__card{ 
       min-height: 200px;
+      min-width: 700;
+      max-width: 450px;      
+
       display: flex;
       flex-direction: column;
-      flex: 1 0 250px;
+      flex: 1 0 300px;
+      /* justify-content: center;
+      align-items: center; */
 
       padding: 1rem 1rem 2rem;
       transition: background-color .4s;
@@ -784,14 +809,13 @@ body.dark-theme{
   background-color: var(--body-color);
   transition: background-color .4s;
   padding-bottom: 0;
-
   .contact__container{
     position: relative;
     grid-template-rows: 300px max-content max-content;
     row-gap: 0;
     margin: 0 auto;
     padding: 2rem;
-    
+   
     .contact__data{
       position: relative;
       width: 100%;
@@ -810,9 +834,10 @@ body.dark-theme{
   
       .contact__description{
 
-        height: max-content; 
+        height: 250px; 
         display: flex;
         flex-direction: column;
+        max-width: max-content;
         .contact__description-1{
           color: var(--title-color);
           font-weight: var(--font-medium);
@@ -834,95 +859,105 @@ body.dark-theme{
 }
 
 /*=============== FORM ===============*/
-.form__section{
-  min-height: 100vh;
-  background-color: black;
-  box-sizing: border-box;
-  
-  .form{
+.form__main{
+  max-width: 1200px;
+  margin: 0 auto;
+  width: 100%;
+  .form__section{
+    max-height: 100%;
+    background-color: black;
+    box-sizing: border-box;
+    min-width: max-content;
+    margin: 0 auto;
     width: 100%;
-    position: relative;
-    margin: 30px auto 0 auto;
-
-    .form__header{
-      text-align: center;
-      color: var(--white-color);
-      padding: 5rem 0 0 0;
-    }
-
-    .form__container{
+    
+    .form{
+      max-width: 990px;
       width: 100%;
-      display: grid;
-      grid-template-columns: repeat(auto-fit,minmax(300px, 1fr));
-      grid-gap: 20px 30px;
-      margin-bottom: 20px;
-      top: 2rem;
-      padding: 3rem 1rem 1rem 1rem;
-
-      .contact__label{
-        font-size: 20px;
+      position: relative;
+      margin: 30px auto 0 auto;
+  
+      .form__header{
+        text-align: center;
+        color: var(--white-color);
+        padding: 5rem 0 0 0;
       }
-
-      .contact__input{
+  
+      .form__container{
         width: 100%;
-        font-weight: 400;
-        padding: 1rem;
-        border-radius: 4px;
-        border: 1.2px solid var(--body-color);
-        margin-top: 5px;
-        background-color: var(--container-color);
+        display: grid;
+        grid-template-columns: repeat(auto-fit,minmax(300px, 1fr));
+        grid-gap: 20px 30px;
+        margin-bottom: 20px;
+        top: 2rem;
+        padding: 3rem 1rem 1rem 1rem;
+  
+        .contact__label{
+          font-size: 20px;
+        }
+  
+        .contact__input{
+          width: 100%;
+          font-weight: 400;
+          padding: 1rem;
+          border-radius: 4px;
+          border: 1.2px solid var(--body-color);
+          margin-top: 5px;
+          background-color: var(--container-color);
+        }
+  
+        .contact__input:focus{
+          outline: none;
+          border-color: var(--first-color);
+        }
       }
-
-      .contact__input:focus{
-        outline: none;
-        border-color: var(--first-color);
-      }
-    }
-
-
-    .form__container-area{
-      width: 100%;
-      display: grid;
-      grid-template-columns: repeat(auto-fit,minmax(300px, 1fr));
-      grid-gap: 20px 30px;
-      margin-bottom: 20px;
-      top: 2rem;
-      padding: 0rem 1rem 0 1rem;
-
-      .contact__label{
-        font-size: 20px;
-      }
-
-      .contact__input{
+  
+  
+      .form__container-area{
         width: 100%;
-        font-weight: 400;
-        padding: 1rem;
+        display: grid;
+        grid-template-columns: repeat(auto-fit,minmax(300px, 1fr));
+        grid-gap: 20px 30px;
+        margin-bottom: 20px;
+        top: 2rem;
+        padding: 0rem 1rem 0 1rem;
+  
+        .contact__label{
+          font-size: 20px;
+        }
+  
+        .contact__input{
+          width: 100%;
+          font-weight: 400;
+          padding: 1rem;
+          border-radius: 4px;
+          border: 1.2px solid var(--body-color);
+          margin-top: 4px;
+          background-color: var(--container-color);
+  
+        }
+  
+        .contact__input:focus{
+          outline: none;
+          border-color: var(--first-color);
+        }
+      }
+  
+      .form__button{
+        border: none;
+        padding: 8px 20px;
+        background-color: var(--first-color);
+        color: var(--white-color);
+        margin: 1rem;;
+        width: 30%;
         border-radius: 4px;
-        border: 1.2px solid var(--body-color);
-        margin-top: 4px;
-        background-color: var(--container-color);
-
+        text-align: center;
+        cursor: pointer;
       }
-
-      .contact__input:focus{
-        outline: none;
-        border-color: var(--first-color);
-      }
-    }
-
-    .form__button{
-      border: none;
-      padding: 8px 20px;
-      background-color: var(--first-color);
-      color: var(--white-color);
-      margin: 1rem;;
-      width: 30%;
-      border-radius: 4px;
-      text-align: center;
-      cursor: pointer;
-    }
-  }  
+    }  
+  }
 }
+
 
 /*=============== FOOTER ===============*/
 .footer{
@@ -946,4 +981,305 @@ body.dark-theme{
     }
     
   } 
+
+
+  @media (width >= 576px){
+    .home__container,
+    .about__container,
+    .projects__container {
+      grid-template-columns: 400px;
+      justify-content: center;
+    }
+
+    .contact__data{
+      width: 500px;
+      padding: 2rem 1.5rem;
+      margin-inline: auto;
+    }
+
+    .contact__container{
+      grid-template-columns: 600px;
+      justify-content: center;      
+    }
+
+    .form__section{
+      grid-template-columns: repeat(2, 1fr);
+      column-gap: 1rem;
+    }
+  }
+/*medium device*/
+  @media (width >= 768px){
+    .studies__container{
+      grid-template-columns: repeat(2, 250px);
+    }
+    .projects__container{
+      grid-template-columns: repeat(2, 350px);
+    }
+  }
+
+  @media (width >= 1060px){
+
+
+    .container{
+      margin-inline: auto;
+      
+    }
+
+    .header{
+      position: fixed;
+      width: 100%;
+      height: 55px;
+      top: 0;
+      left: 0;
+      background-color:var(--black-color);
+      z-index: var(--z-fixed);
+      transition: box-shadow .4s; 
+    }
+    
+    .section{
+      padding-block:7rem 5rem;
+    }
+    
+    .section__title-1::after,
+    .section__title-2::after{
+      height: 45px;
+      width: 70px;
+    }
+
+    .geometric-box{
+      transform: scale(1.2);
+    }
+    
+    .nav{
+      height: 4rem;
+      padding: 2.5rem;
+    }
+
+    .nav__logo-circle{
+      border:2px solid white;
+      color: var(--text-color-light);
+      position: relative;
+      right: 4rem;
+      top: -12px;
+    }
+     
+    /************hidden menu*******/
+    .nav__logo-name,
+    .nav__close,
+    .nav__toggle,
+    .nav-title,
+    .nav__name{
+      visibility: hidden;
+    }  
+
+    /*******/
+    .nav__list{
+      position: relative;
+      height: 50px;
+      width: 450px;
+      top: -3.5rem;
+      display: flex;
+      margin: 0 auto;
+      flex-wrap: wrap;
+      }
+
+      .nav-item{
+        position: relative;
+        top: -12px;
+        right: -220px;
+      }
+
+      .nav__link{
+        color: var(--black-color);
+        font-size: var(--normal-font-size);
+      }
+
+      .item-contact{
+        background-color: var(--black-color);
+        padding: 4px;
+        border: 2px solid var(--text-color);
+      }
+
+
+      .nav__link::after{
+        color: var(--black-color);   
+      }
+
+      .nav__buttons{
+        display:grid;
+        position: relative;
+        top: 4px;
+        right:35rem;
+        .ri-moon-line{
+          color: bisque;
+        }
+      }
+
+      .nav__link-button{
+        background-color: var(--black-color);
+        color:var(--white-color);
+        padding: 1rem 1.5rem;
+      }
+
+      .home__container{
+        grid-template-columns: repeat(3, 350px);
+        gap: 3rem 4rem;
+        align-items: center;
+        height: 350px;
+      }
+      .home__perfil{
+        grid-column: 3;
+        width: 100%;
+        
+      }
+      .home__image{
+         position: relative;
+
+
+        .home__img{
+          position: absolute;
+          width: 350px;
+          height: 350px;
+          right: -.3em;
+        }
+      }
+
+      .home__social{
+        align-items: center;
+
+        .home__social-link{
+          position: relative;
+          margin-bottom: 28px;
+          top: 13px; 
+          right: 18rem;
+          width: 120px;
+          height: 80px;
+        }         
+        .home__social-link-medium{
+          position: relative;
+          margin-bottom: 28px;
+          top: 13px; 
+          right: 18rem;
+          width: 120px;
+          height: 80px;
+        }
+      }
+
+      .home__scroll-box{
+        background-color: var(--black-color);
+        color: var(--white-color);
+        width: 36px;
+        height: 36px;
+        display: grid;
+        place-items: center;
+        font-size: 1rem;
+        cursor: pointer;
+        overflow: hidden;
+        transition: background-color .4s;
+        position: absolute;
+        left: 4.5rem;
+        bottom: 4rem;
+
+
+      }
+  
+      .home__name{
+        text-align: center;
+        font-size: var(--h1-font-size);
+      }
+
+  
+      .home__info{
+        margin-top: 0;
+        align-self: flex-start;
+      }
+                  
+      .home__shadow{
+        position: relative;
+        bottom: -1.25rem;
+        border: 6px solid;
+      }
+
+  
+      .home__description{
+        position: relative;
+        font-size: var(--h2-font-size);
+        margin-bottom: -1.5rem;
+        top: -28rem;
+        right: 3rem;
+        padding-left: 2rem;
+        max-width: 340px;
+        width: 100%;
+      }
+       
+  
+      .nav__scroll{
+        margin: 0;
+        display: flex;
+        align-items: center;
+        column-gap: .75rem;
+      }
+  
+     .about__container{
+      grid-template-columns: 450px 570px;
+      gap: 1rem 12rem;
+      align-items: start;
+      padding-block: .5rem;
+     }
+     /* dsfds */
+     .about__perfil{
+
+      grid-row: 1 / 3;
+     }
+     .about__imgage{
+      width: 350px;
+     }
+
+     .about__img{
+      border: 8px solid var(--white-color);
+     }
+
+     .about__shadow{
+      width: 240px;
+      height: 615px;
+      top: -45rem;
+      right: -5.5rem;
+      border-bottom: 6px solid var(--first-color);      
+     }    
+
+     .about__description-1,
+     .about__description-2{
+      font-size: var(--h2-font-size);
+      margin-bottom: 2rem;
+    }
+    .about__list{
+      color: var(--black-color);
+    }
+
+    .studies__section{
+      margin: 0 auto;
+      justify-content: center;
+      max-width: 1415px;
+      width: 100%;    
+      }
+
+      .contact__main{
+        display: flex;
+        flex-wrap: wrap;
+        flex: 1 0 1200px;
+      }
+
+      /***Service*/
+
+      .studies__description{
+        font-size: 20px;
+        padding-top: 20px;
+
+      }
+   
+  }
+
+
+
+
 
