--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -125,9 +125,6 @@ body.dark-theme{
 }
 
 
-
-
-
 /*=============== REUSABLE CSS CLASSES ===============*/
 .container {
   max-width: 90%;
@@ -348,7 +345,7 @@ body.dark-theme{
 
   /*=============== HOME ===============*/
   .home__container{
-    padding: 1rem;
+    padding-top: 1rem;
     margin: 0 auto;
     
 
@@ -653,10 +650,7 @@ body.dark-theme{
   display: flex;
   flex-direction: column;
   flex-wrap: wrap;
-  
-  .section__title-2{
 
-  }
   .studies__container{
     grid-template-columns: 250px;
     row-gap: 2rem;
@@ -983,42 +977,7 @@ body.dark-theme{
   } 
 
 
-  @media (width >= 576px){
-    .home__container,
-    .about__container,
-    .projects__container {
-      grid-template-columns: 400px;
-      justify-content: center;
-    }
-
-    .contact__data{
-      width: 500px;
-      padding: 2rem 1.5rem;
-      margin-inline: auto;
-    }
-
-    .contact__container{
-      grid-template-columns: 600px;
-      justify-content: center;      
-    }
-
-    .form__section{
-      grid-template-columns: repeat(2, 1fr);
-      column-gap: 1rem;
-    }
-  }
-/*medium device*/
-  @media (width >= 768px){
-    .studies__container{
-      grid-template-columns: repeat(2, 250px);
-    }
-    .projects__container{
-      grid-template-columns: repeat(2, 350px);
-    }
-  }
-
   @media (width >= 1060px){
-
 
     .container{
       margin-inline: auto;
@@ -1121,67 +1080,76 @@ body.dark-theme{
         padding: 1rem 1.5rem;
       }
 
+      .home{
+        padding: 4em 2em;
+      }
+
       .home__container{
-        grid-template-columns: repeat(3, 350px);
-        gap: 3rem 4rem;
-        align-items: center;
-        height: 350px;
+        display: flex;
+        flex-direction: row-reverse;
+        gap: 2em;
+        max-width: 100%;  
+        justify-content: center;    
       }
-      .home__perfil{
-        grid-column: 3;
-        width: 100%;
-        
-      }
-      .home__image{
-         position: relative;
 
+      /****DESCRIPTION****/
+      .home__info{
+        width: 33.333%;
+        display: flex;
+        flex-direction: column;
 
-        .home__img{
-          position: absolute;
-          width: 350px;
-          height: 350px;
-          right: -.3em;
-        }
       }
+
+      .home__description{
+        max-width: 100%;
+        font-size: 1.5em;
+      }
+
+      /****SOCIAL****/
 
       .home__social{
+        width: 33.333%;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
         align-items: center;
+        gap: 3em 0;
+      }
 
-        .home__social-link{
-          position: relative;
-          margin-bottom: 28px;
-          top: 13px; 
-          right: 18rem;
-          width: 120px;
-          height: 80px;
-        }         
-        .home__social-link-medium{
-          position: relative;
-          margin-bottom: 28px;
-          top: 13px; 
-          right: 18rem;
-          width: 120px;
-          height: 80px;
+      .ri-linkedin-box-fill, .ri-discord-fill{
+        background-color: rgb(73, 72, 71);
+        color: aliceblue;
+        padding: 0.4em;
+        font-size: 3em;
+        &:hover{
+          background-color: var(--first-color);
         }
       }
 
-      .home__scroll-box{
-        background-color: var(--black-color);
-        color: var(--white-color);
-        width: 36px;
-        height: 36px;
-        display: grid;
-        place-items: center;
-        font-size: 1rem;
-        cursor: pointer;
-        overflow: hidden;
-        transition: background-color .4s;
-        position: absolute;
-        left: 4.5rem;
-        bottom: 4rem;
-
-
+      .ri-github-fill{
+        background-color: rgb(0, 0, 0);
+        color: aliceblue;
+        padding: 0.4em;
+        font-size: 3em;
+        &:hover{
+          background-color: var(--first-color);
+        }
       }
+
+      /****IMAGE****/
+
+      .home__image{
+        width: 33.333%;
+        margin-top: 3em;
+      }
+
+      .home__img{
+        width: 90%;
+        position: relative;
+        box-shadow: rgb(38, 57, 77) 0px 20px 30px -10px;
+        z-index: 2;
+      }
+
   
       .home__name{
         text-align: center;
@@ -1194,23 +1162,8 @@ body.dark-theme{
         align-self: flex-start;
       }
                   
-      .home__shadow{
-        position: relative;
-        bottom: -1.25rem;
-        border: 6px solid;
-      }
-
   
-      .home__description{
-        position: relative;
-        font-size: var(--h2-font-size);
-        margin-bottom: -1.5rem;
-        top: -28rem;
-        right: 3rem;
-        padding-left: 2rem;
-        max-width: 340px;
-        width: 100%;
-      }
+  
        
   
       .nav__scroll{
