--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1082,14 +1082,21 @@ body.dark-theme{
 
       .home{
         padding: 4em 2em;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
       }
 
       .home__container{
         display: flex;
+        width: 100%;
+        max-width: 1060px;
+        margin: 0 auto;
         flex-direction: row-reverse;
-        gap: 2em;
-        max-width: 100%;  
+        gap: 2em;  
         justify-content: center;    
+        align-items: center;
       }
 
       /****DESCRIPTION****/
@@ -1144,7 +1151,7 @@ body.dark-theme{
       }
 
       .home__img{
-        width: 90%;
+        max-width: 90%;
         position: relative;
         box-shadow: rgb(38, 57, 77) 0px 20px 30px -10px;
         z-index: 2;
