--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1080,8 +1080,17 @@ body.dark-theme{
         padding: 1rem 1.5rem;
       }
 
+      .nav__scroll{
+        margin: 0;
+        display: flex;
+        align-items: center;
+        column-gap: .75rem;
+      }
+
+      /*---------SECTION HOME------------------**/
+
       .home{
-        padding: 4em 2em;
+        padding: 3em 2em;
         display: flex;
         flex-direction: column;
         justify-content: center;
@@ -1147,7 +1156,7 @@ body.dark-theme{
 
       .home__image{
         width: 33.333%;
-        margin-top: 3em;
+        margin-top: 1em;
       }
 
       .home__img{
@@ -1162,37 +1171,34 @@ body.dark-theme{
         text-align: center;
         font-size: var(--h1-font-size);
       }
-
-  
+      
+      
       .home__info{
         margin-top: 0;
         align-self: flex-start;
       }
                   
+       /*---------SECTION ABOUT------------------**/
+    .about__container{
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      width: 100%;
+      max-width: 1060px;
+    }    
   
-  
-       
-  
-      .nav__scroll{
-        margin: 0;
-        display: flex;
-        align-items: center;
-        column-gap: .75rem;
-      }
-  
-     .about__container{
-      grid-template-columns: 450px 570px;
-      gap: 1rem 12rem;
-      align-items: start;
-      padding-block: .5rem;
+     .about__main{      
+      width: 100%;
+      max-width: 1060px;
+      display: flex;
+      justify-content: center;
+      gap: 0 5em;
      }
-     /* dsfds */
-     .about__perfil{
 
-      grid-row: 1 / 3;
-     }
-     .about__imgage{
-      width: 350px;
+     .about__image{
+      display: flex;
+      flex-direction: column;
      }
 
      .about__img{
@@ -1201,8 +1207,6 @@ body.dark-theme{
 
      .about__shadow{
       width: 240px;
-      height: 615px;
-      top: -45rem;
       right: -5.5rem;
       border-bottom: 6px solid var(--first-color);      
      }    
@@ -1219,7 +1223,7 @@ body.dark-theme{
     .studies__section{
       margin: 0 auto;
       justify-content: center;
-      max-width: 1415px;
+      max-width: 1060px;
       width: 100%;    
       }
 
