--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -747,20 +747,18 @@ body.dark-theme{
     display: flex;
     flex-wrap: wrap;
     flex: 1 0 300px;
-    max-width: 1220px;
+    max-width: 1060px;
     width: 100%;
     
 
     .projects__card{ 
       min-height: 200px;
       min-width: 700;
-      max-width: 450px;      
-
+      max-width: 450px;  
       display: flex;
       flex-direction: column;
       flex: 1 0 300px;
-      /* justify-content: center;
-      align-items: center; */
+      margin: auto;
 
       padding: 1rem 1rem 2rem;
       transition: background-color .4s;
@@ -805,7 +803,7 @@ body.dark-theme{
   padding-bottom: 0;
   .contact__container{
     position: relative;
-    grid-template-rows: 300px max-content max-content;
+    grid-template-rows: 250px max-content max-content;
     row-gap: 0;
     margin: 0 auto;
     padding: 2rem;
@@ -813,13 +811,13 @@ body.dark-theme{
     .contact__data{
       position: relative;
       width: 100%;
-      height: 100%;
+      height: max-content;
+      /* max-height: max-content; */
       background-color: var(--body-color);
       margin-left: auto;
       border-bottom: 4px solid var(--first-color);
       z-index: 3;
       transition: background-color .4s;
-      height: max-content;
       padding-bottom: 2rem;
 
       .section__title-1{
@@ -1220,6 +1218,7 @@ body.dark-theme{
       color: var(--black-color);
     }
 
+    /*---------SECTION STUDIES------------------**/
     .studies__section{
       margin: 0 auto;
       justify-content: center;
@@ -1227,19 +1226,40 @@ body.dark-theme{
       width: 100%;    
       }
 
-      .contact__main{
-        display: flex;
-        flex-wrap: wrap;
-        flex: 1 0 1200px;
-      }
-
-      /***Service*/
-
       .studies__description{
         font-size: 20px;
         padding-top: 20px;
 
       }
+
+      .ri-layout-4-line, .ri-code-box-line, .ri-smartphone-line {
+        background-color: var(--first-color);
+      }
+
+      /*---------PROJECTS STUDIES------------------**/
+      .contact__container{
+        max-height: max-content;
+        padding-bottom: 10em;
+      }
+      .projects__container{
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        width: 100%;
+        max-width: 1060px;
+      }
+
+      /*---------SECTON CONTACT------------------**/
+      .contact__data{
+        width: 100%;
+        max-width: 660px;
+        margin: auto;
+        font-size: 1.1em;
+        height: 100%;
+      }
+      
+
+
    
   }
 
