--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -345,107 +345,60 @@ body.dark-theme{
 
   /*=============== HOME ===============*/
   .home__container{
-    padding-top: 1rem;
-    margin: 0 auto;
+    display: flex;
+    width: 100%;
+    flex-direction: column;
+    gap: 2.5em 2em;  
+    justify-content: center;    
+    align-items: center;
+  } 
+
+  .home__social{
+    width: 33.333%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 1em;
+  }
+
+  .ri-linkedin-box-fill, .ri-discord-fill{
+    background-color: var(--black-color-light);
+    color: aliceblue;
+    padding: 0.3em;
+    font-size: 2.7em;
+    &:hover{
+      background-color: var(--first-color);
+    }
+  }
+
+  .ri-github-fill{
+    background-color: var(--black-color);
+    color: aliceblue;
+    padding: 0.3em;
+    font-size: 2.7em;;
+    &:hover{
+      background-color: var(--first-color);
+    }
+  }
+
+  .home__description{
+    margin-top: -3.7em;
+  }
     
 
     .home__name{
-      font-size: var(--biggest-font-size);
+      font-size: 2em;
       text-align: center;
     }
 
     .home__perfil{
       position: relative;
       justify-self: center;
-
-      .home__image{
-        width: 100%;;
-        /* Corregir a 220 */
-
-        .home__img{
-          position: relative;
-          z-index: 2;
-          border: 4px,solid var(--white-color);
-        }
-        
-        .home__shadow{
-          width: 100%;
-          height: 100%;
-          background-color: var(--container-color);
-          position: absolute;
-          right: -.75rem;
-          bottom: -.75rem;
-          border: 4px solid var(--black-color);
-          z-index: 1;       
-          transition: background-color;
-        }
-
-        .home__arrow,
-        .home__line{
-          position: absolute;
-          filter: invert(1);
-          width: 50px;
-          /* transition: filter .4s; */
-        }
-
-        .home__arrow{
-          left: 40%;
-          bottom: -4rem;
-        }
-
-        .home__line{
-          right: -2rem;
-          bottom: -.7rem;
-        }
-
-        .geometric-box{
-          top: 2.5rem;
-          left: -.7rem;
-          z-index: 2;
-        }    
-      }
-
-      .home__social{
-        height: max-content;
-        position: absolute;
-        left: -3rem;
-        top:0;
-        bottom: 0;
-        margin: auto 0;
-        display: grid;
-        row-gap: 1rem; 
-        font-size: 1.25rem;
-
-        .home__social-link{
-          background-color: var(--black-color-light);
-          color: var(--white-color);
-          font-size: 1.25rem;
-          padding: 6px;
-          display: grid;
-          place-items: center;
-          transition: background-color .3s;
-        }
-
-        .home__social-link-medium{
-          background-color: var(--black-color);
-          color: var(--white-color);
-          font-size: 1.25rem;
-          padding: 6px;
-          display: grid;
-          place-items: center;
-          transition: background-color .3s;
-        }
-
-        .home__social-link:hover{
-          background-color: var(--first-color);
-        }  
-        
-        .home__social-link-medium:hover{
-          background-color: var(--first-color);
-        }
-      }    
+  
+    }          
+         
       
-    } 
+
     .home__info{
       margin-top: 4rem;
 
@@ -486,7 +439,7 @@ body.dark-theme{
       }
     } 
 
-  }
+
 
   /*Efecto ícono de flechita abajo */
 
@@ -1125,7 +1078,7 @@ body.dark-theme{
       }
 
       .ri-linkedin-box-fill, .ri-discord-fill{
-        background-color: rgb(73, 72, 71);
+        background-color: rgb(168, 153, 138);
         color: aliceblue;
         padding: 0.4em;
         font-size: 3em;
