--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -39,26 +39,6 @@
   --z-fixed: 100;
 }
 
-/*========== Responsive typography ==========*/
-@media (width > 1150px) {
-  :root {
-    --biggest-font-size: 4.5rem;
-    --h1-font-size: 3rem;
-    --h2-font-size: 1.5rem;
-    --h3-font-size: 1.25rem;
-    --normal-font-size: 1rem;
-    --small-font-size: .875rem;
-    --smaller-font-size: .813rem;
-  }
-}
-
-/*========== Responsive typography ==========*/
-@media (width > 768px) {
-  .studies__container{
-    grid-template-columns: repeat(2, 250px) 
-  }
-}
-
 /*=============== BASE ===============*/
 * {
   box-sizing: border-box;
@@ -170,44 +150,11 @@ body.dark-theme{
   bottom: -4px;
 }
 
-.geometric-box {
-  position: absolute;
-  width: 20px;
-  height: 20px;
-  background-color: var(--first-color);
-  rotate: -30deg;
-}
 
-.geometric-box::after {
-  content: "";
-  position: absolute;
-  width: 16px;
-  height: 16px;
-  border: 3px solid var(--black-color);
-  left: -5px;
-  top: -5px;
-}
 
 .main {
   overflow: hidden; /* For animation ScrollReveal */
 }
-
-
-/* Navigation for mobile devices */
-@media (width <= 1060px){
-  .nav__menu{
-    position: fixed;
-    top: -100%;
-    left: 0;
-    background-color: hsla(0, 0%, 0%, .75);
-    width: 100%;
-    padding-block: 1.8rem 5rem ;
-    text-align: center;
-    backdrop-filter: blur(8px);
-    transition: top -4s;
-  }  
-}
-
 
 
 /*=============== HEADER & NAV ===============*/
@@ -921,7 +868,105 @@ body.dark-theme{
     
   } 
 
+  /* Navigation for mobile devices */
+@media (width <= 1060px){
+  .nav__menu{
+    position: fixed;
+    top: -100%;
+    left: 0;
+    background-color: hsla(0, 0%, 0%, .75);
+    width: 100%;
+    padding-block: 1.8rem 5rem ;
+    text-align: center;
+    backdrop-filter: blur(8px);
+    transition: top -4s;
+  }  
+}
 
+/****WINDOWS TABLET ****/
+@media (width >= 641px)and (width <= 1060px){
+  .home{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .home__container{
+    display: flex;
+    flex-wrap: wrap;
+    width: 100%;
+    max-width: 641px;
+    margin: 0 auto;
+    flex-direction: row;
+    gap: 1em;  
+    justify-content: center;    
+    align-items: center;
+    
+  }
+  
+   /****IMAGE****/
+  .home__image{
+    display: flex;
+    flex: 2 0 250px;
+    width: 50%;
+    margin-top: 1em;
+  }
+
+  .home__img{
+    max-width: 90%;
+    position: relative;
+    box-shadow: rgb(38, 57, 77) 0px 20px 30px -10px;
+    z-index: 2;
+  }
+
+
+        /****SOCIAL****/
+
+        .home__social{
+          margin-top: 1em;
+          width: 50%;
+          display: flex;
+          flex-direction: column;
+          justify-content: center;
+          align-items: center;
+          gap: 3em 0;
+        }
+  
+        .ri-linkedin-box-fill, .ri-discord-fill{
+          background-color: rgb(168, 153, 138);
+          color: aliceblue;
+          padding: 0.4em;
+          font-size: 3em;
+          &:hover{
+            background-color: var(--first-color);
+          }
+        }
+  
+        .ri-github-fill{
+          background-color: rgb(0, 0, 0);
+          color: aliceblue;
+          padding: 0.4em;
+          font-size: 3em;
+          &:hover{
+            background-color: var(--first-color);
+          }
+        }
+
+  .home__info{
+    margin-top: 0;
+    align-self: flex-start;
+  }
+
+  
+  .home__description{
+    max-width: 100%;
+    font-size: 1.5em;
+    margin-top: 3em;
+  }
+}
+
+/****WINDOWS DESKTOP AND + ****/
   @media (width >= 1060px){
 
     .container{
@@ -1058,12 +1103,12 @@ body.dark-theme{
         width: 33.333%;
         display: flex;
         flex-direction: column;
-
       }
 
       .home__description{
         max-width: 100%;
         font-size: 1.5em;
+        margin-top: 3em;
       }
 
       /****SOCIAL****/
@@ -1204,10 +1249,7 @@ body.dark-theme{
         font-size: 1.1em;
         height: 100%;
       }
-      
-
-
-   
+         
   }
 
 
