--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -923,47 +923,66 @@ body.dark-theme{
 
         /****SOCIAL****/
 
-        .home__social{
-          margin-top: 1em;
-          width: 50%;
-          display: flex;
-          flex-direction: column;
-          justify-content: center;
-          align-items: center;
-          gap: 3em 0;
-        }
+  .home__social{
+    margin-top: 1em;
+    width: 50%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 3em 0;
+  }
   
-        .ri-linkedin-box-fill, .ri-discord-fill{
-          background-color: rgb(168, 153, 138);
-          color: aliceblue;
-          padding: 0.4em;
-          font-size: 3em;
-          &:hover{
-            background-color: var(--first-color);
-          }
-        }
+  .ri-linkedin-box-fill, .ri-discord-fill{
+    background-color: rgb(168, 153, 138);
+    color: aliceblue;
+    padding: 0.4em;
+    font-size: 3em;
+    &:hover{
+      background-color: var(--first-color);
+      }
+    }
   
-        .ri-github-fill{
-          background-color: rgb(0, 0, 0);
-          color: aliceblue;
-          padding: 0.4em;
-          font-size: 3em;
-          &:hover{
-            background-color: var(--first-color);
-          }
-        }
+   .ri-github-fill{
+     background-color: rgb(0, 0, 0);
+     color: aliceblue;
+     padding: 0.4em;
+     font-size: 3em;
+     &:hover{
+     background-color: var(--first-color);
+     }
+   }
 
   .home__info{
     margin-top: 0;
     align-self: flex-start;
   }
-
   
   .home__description{
     max-width: 100%;
-    font-size: 1.5em;
+    font-size: 1.3em;
     margin-top: 3em;
   }
+
+  /**** ABOUT SECTION*****/
+  .about__container{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    max-width: 800px;
+    font-size: 1.3em;
+  }  
+
+  .about__main{      
+    width: 100%;
+    max-width: 800px;
+    display: flex;
+    justify-content: center;
+    gap: 0 5em;
+   }
+
 }
 
 /****WINDOWS DESKTOP AND + ****/
@@ -993,10 +1012,6 @@ body.dark-theme{
     .section__title-2::after{
       height: 45px;
       width: 70px;
-    }
-
-    .geometric-box{
-      transform: scale(1.2);
     }
     
     .nav{
