--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -183,7 +183,8 @@ img {
             }
     
             .home__img{
-              box-shadow: rgb(216, 71, 4) 0px 3px 40px 0px, rgb(216, 71, 4) 0px 2px 60px 0px;
+              /* box-shadow: rgb(216, 71, 4) 0px 19px 38px, rgb(216, 71, 4) 0px 15px 12px; */
+              box-shadow: rgb(216, 71, 4) 0px 5px 15px;
             }  
     
             .studies__content, 
@@ -1237,8 +1238,6 @@ img {
         position: relative;
         box-shadow: rgb(38, 57, 77) 0px 20px 40px -10px, rgb(38, 57, 77) 0px 20px 60px -10px;
         z-index: 2;
-        /* box-shadow: rgb(216, 71, 4) 0px 3px 40px 0px, rgb(216, 71, 4) 0px 2px 60px 0px;
-        border-radius: 25em; */
       }
 
   
